# Limit-Orderbook

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmarks/: benchmark.cpp
docs/: architecture.md
docs/diagrams/: orderbook-flow.md
examples/: orders.csv
include/: Order.hpp  OrderBook.hpp  OrderModify.hpp  Simulator.hpp  Trade.hpp  Types.hpp
src/: Order.cpp  OrderBook.cpp  OrderModify.cpp  Simulator.cpp  Trade.cpp  main.cpp
tests/: OrderBookTests.cpp
